création model pour requête SQL et ajout validator pour contrôle saisies formulaire

--- a/views/formulaire_adherent.pug
+++ b/views/formulaire_adherent.pug
@@ -19,6 +19,11 @@ block content
     input(type='email' name='courriel' placeholder='nom@yopmail.com') 
     input(type='submit' value='envoyer')
 
+  // Affichage des erreurs 
+  ul
+    each erreur in listeErreur
+      li= erreur['path']+':  '+erreur['msg']
+
 
 
 
