--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= title
+    title= 'AMAP-LMS -' + titre
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
