--- a/views/formulaire_adherent.pug
+++ b/views/formulaire_adherent.pug
@@ -17,12 +17,13 @@ block content
     input(type='tel' name='tel')
     label Courriel:  
     input(type='email' name='courriel' placeholder='nom@yopmail.com') 
-    input(type='submit' value='envoyer')
+    input(type='submit' value='Envoyer')
 
   // Affichage des erreurs 
-  ul
-    each erreur in listeErreur
-      li= erreur['path']+':  '+erreur['msg']
+  div(class='rouge')
+    ul
+      each erreur in listeErreur
+        li= erreur['path']+':  '+erreur['msg']
 
 
 
