--- a/views/adherent/formulaire.pug
+++ b/views/adherent/formulaire.pug
@@ -1,10 +1,10 @@
-extends layout
+extends ../layout
 
 block content
   h1= titre
   form(
     role='form'
-    action='/adherent/ajout-adherent'
+    action='/adherent/ajout'
     method='POST' 
   )
     label nom:  
