--- a/views/adherent/formulaire.pug
+++ b/views/adherent/formulaire.pug
@@ -16,14 +16,14 @@ block content
     label téléphone:  
     input(type='tel' name='tel')
     label Courriel:  
-    input(type='email' name='courriel' placeholder='nom@yopmail.com') 
+    input(type='email' name='courriel' placeholder='nom@mail.fr') 
     input(type='submit' value='Envoyer')
 
   // Affichage des erreurs 
   div(class='rouge')
     ul
       each erreur in listeErreur
-        li= erreur['path']+':  '+erreur['msg']
+        li= erreur.path+':  '+erreur.msg
 
 
 
