label forulaire adherent avec une majuscule au debut

--- a/views/adherent/formulaire.pug
+++ b/views/adherent/formulaire.pug
@@ -7,15 +7,15 @@ block content
     action='/adherent/ajout'
     method='POST' 
   )
-    label nom:  
+    label Nom :  
     input(type='text' name='nom')
-    label prénom:  
+    label Prénom :  
     input(type='text' name='prenom')
-    label adresse:  
+    label Adresse :  
     input(type='text' name='adresse')
-    label téléphone:  
+    label Téléphone :  
     input(type='tel' name='tel')
-    label Courriel:  
+    label Courriel :  
     input(type='email' name='courriel' placeholder='nom@mail.fr') 
     input(type='submit' value='Envoyer')
 
