--- a/views/adherent/liste.pug
+++ b/views/adherent/liste.pug
@@ -13,6 +13,7 @@ block content
           th Adresse
           th Courriel
           th Téléphone
+          th Action
       tbody 
         each adherent in listeAdherent 
           tr
@@ -21,6 +22,8 @@ block content
             td= adherent.adresse
             td= adherent.courriel
             td= adherent.telephone
+            td 
+              a(href='/adherent/suppression/'+adherent.id) supprime
         else 
           tr 
             td pas de données          
