correction documentaires et ajout d'une icone au bouton supprimer un adherent

--- a/views/adherent/formulaire.pug
+++ b/views/adherent/formulaire.pug
@@ -4,7 +4,7 @@ block content
   h1= titre
   form(
     role='form'
-    action='/adherent/ajout'
+    action='/adherent/ajouter'
     method='POST' 
   )
     label Nom :  
