--- a/views/adherent/liste.pug
+++ b/views/adherent/liste.pug
@@ -24,6 +24,7 @@ block content
             td= adherent.telephone
             td 
               a(title='Supprimer' href='/adherent/supprimer/'+adherent.id) 	&#10060; 
+              a(title='Modifier' href='/adherent/modifier/'+adherent.id) 	&#128394; 
         else 
           tr 
             td Pas de données          
