correction oubli attribut name dans input type hidden form

--- a/views/adherent/formulaire.pug
+++ b/views/adherent/formulaire.pug
@@ -8,7 +8,7 @@ block content
     method='POST' 
   )
     // le type hidden : Permet de récupérer de façon transparente l'id quand il existe afin de distinguer la modification d'un ajout
-    input(type='hidden' value=adherent.id)
+    input(type='hidden' name='id' value=adherent.id)
     // Champs de saisie utilisateur pré-rempli si la valeur (value) existe
     label Nom :  
     input(type='text' name='nom' value=adherent.nom)
