--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,7 @@ html
   head
     title= 'AMAP-LMS - ' + titre
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='/javascripts/pop-up-confirmation.js')
   body
     nav() 
       ul 
