renommage adhérent en personne et ajout de la rubrique catégorie pour différencier adhérent et fournisseur

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,7 +10,7 @@ html(lang='fr')
         li
           a(href='/') Accueil 
         li
-          a(href='/adherent/') Liste des adhérents
+          a(href='/personne/') Liste des personnes
         li
           a(href='/tarif/') Liste des tarifs
     hr
