--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,6 +12,8 @@ html(lang='fr')
         li
           a(href='/personne/') Liste des personnes
         li
+          a(href='/contrat/legume/') Liste des contrats legume
+        li
           a(href='/tarif/') Liste des tarifs
     hr
     block content
