--- a/views/personne/formulaire.pug
+++ b/views/personne/formulaire.pug
@@ -36,6 +36,8 @@ block content
       input(type='email' name='courriel' placeholder='courriel@domain.com') 
     input(type='submit' value='Envoyer')
 
+  p * valeur optionnelle
+  
   // Affichage des erreurs 
   div(class='rouge')
     ul
