--- a/views/tarif/formulaire.pug
+++ b/views/tarif/formulaire.pug
@@ -16,6 +16,8 @@ block content
     input(type='number' step='.01' min='0' name='prix' value=tarif.prix)
     input(type='submit' value='Envoyer')
 
+  p * valeur optionnelle
+  
   // Affichage des erreurs 
   div(class='rouge')
     ul
