--- a/views/contrat/legume/liste.pug
+++ b/views/contrat/legume/liste.pug
@@ -8,22 +8,16 @@ block content
     table 
       thead 
         tr 
-          th Nom 
-          th Prénom
-          th Tarif
-          th Quantité
+          th Nombre de panier
           th Commentaire
       tbody 
         each contrat in listeContrat 
           tr
-            td= contrat.nom
-            td= contrat.prenom
-            td= contrat.tarif
             td= contrat.quantite
             td= contrat.commentaire
             td 
-              a(title='Supprimer' href='/contrat/supprimer/'+contrat.id class='pop-up-confirmation') 	&#10060; 
-              a(title='Modifier' href='/contrat/modifier/'+contrat.id) 	&#128394; 
+              a(title='Supprimer' href='/contrat/legume/supprimer/'+contrat.id class='pop-up-confirmation') 	&#10060; 
+              a(title='Modifier' href='/contrat/legume/modifier/'+contrat.id) 	&#128394; 
         else 
           tr 
             td Pas de données          
