--- a/views/tarif/formulaire.pug
+++ b/views/tarif/formulaire.pug
@@ -10,13 +10,13 @@ block content
     // le type hidden : Permet de récupérer de façon transparente l'id quand il existe afin de distinguer la modification d'un ajout
     input(type='hidden' name='id' value=tarif.id)
     // Champs de saisie utilisateur pré-rempli si la valeur (value) existe
-    label Nom :  
+    label Nom * :  
     input(type='text' name='nom' value=tarif.nom)
-    label Prix en euros :  
+    label Prix en euros * :  
     input(type='number' step='.01' min='0' name='prix' value=tarif.prix)
     input(type='submit' value='Envoyer')
 
-  p * valeur optionnelle
+  p * saisie obligatoire
   
   // Affichage des erreurs 
   div(class='rouge')
